--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-ZINC_PSW = t5w0109%
+ZINC_PSW = password1
 ZINC_USER= admin
 ZINC_API = http://localhost:4080/api/
 
@@ -9,4 +9,3 @@ DBPORT=4080
 DBHOST=http://localhost:4080
 BASEPATH=$HOME/*/Dataset
 
-# import dotenv from 'dotenv';
