--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/axios": "^0.14.0",
     "autoprefixer": "^10",
+    "axios": "^1.2.3",
+    "fetch": "^1.1.0",
     "postcss": "^8",
     "tailwindcss": "^3",
     "vue": "^3.2.13",
