--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,9 @@
     "@types/axios": "^0.14.0",
     "autoprefixer": "^10",
     "axios": "^1.2.3",
-    "fetch": "^1.1.0",
+    "node-fetch": "^3.3.0",
+    "moment": "^2.29.4",
+  
     "postcss": "^8",
     "tailwindcss": "^3",
     "vue": "^3.2.13",
